# trill_circuitpython

./: README.md
trill_circuitpython/: README.md  __init__.py  pyproject.toml  touch.py  trill.py
trill_circuitpython/examples/: trill_bar_example.py  trill_craft_example.py  trill_craft_processing_bridge.py  trill_square_example.py
